fix: escape {{ literal in entry.html

--- a/templates/entry.html
+++ b/templates/entry.html
@@ -14266,7 +14266,7 @@ a.anchor-link {
 
 <span class="p">{</span><span class="o">%</span> <span class="n">block</span> <span class="n">body</span> <span class="o">%</span><span class="p">}</span>
 
-<span class="o">&lt;</span><span class="n">h2</span><span class="o">&gt;</span><span class="p">{{</span> <span class="n">the_title</span> <span class="p">}}</span><span class="o">&lt;/</span><span class="n">h2</span><span class="o">&gt;</span>
+<span class="o">&lt;</span><span class="n">h2</span><span class="o">&gt;</span><span class="p">{% raw %}{{{% endraw %}</span> <span class="n">the_title</span> <span class="p">}}</span><span class="o">&lt;/</span><span class="n">h2</span><span class="o">&gt;</span>
 
 <span class="o">&lt;</span><span class="n">form</span> <span class="n">method</span><span class="o">=</span><span class="s1">&#39;POST&#39;</span> <span class="n">action</span><span class="o">=</span><span class="s1">&#39;/search4&#39;</span><span class="o">&gt;</span>
 <span class="o">&lt;</span><span class="n">table</span><span class="o">&gt;</span>
